# safarimanager_liveview

./: .credo.exs  .dockerignore  .env.codesign.local.example  .envrc  .formatter.exs  .gitignore  .tool-versions  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  mix.exs  versions
.github/workflows/: main.yml  release.yml  test.yml
assets/: package.json  tailwind.config.js
assets/css/: app.css  components.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  standalone.exs  test.exs
docs/: ARCHITECTURE.md  README.md  SCORING.md
elixirkit/: Makefile
elixirkit/otp_bootstrap/: build.sh  build_macos_universal.sh
lib/: safarimanager.ex  safarimanager_app.ex  safarimanager_web.ex
lib/safarimanager/: accounts.ex  application.ex  cache.ex  categories.ex  competitions.ex  config.ex  csv_export.ex  csv_import.ex  default_password.ex  evaluations.ex  file_browser.ex  image_processing.ex  jurors.ex  mailer.ex  migrator.ex  organizations.ex  participants.ex  prom_ex.ex  release.ex  repo.ex  results.ex  seeds.ex  slides.ex  subjects.ex  teams.ex  usb_watcher.ex  usb_watcher_supervisor.ex  utils.ex
lib/safarimanager_web/: endpoint.ex  error_helpers.ex  gettext.ex  layouts.ex  prometheus_push.ex  router.ex  (+3 more)
rel/: env.sh.eex  vm.args.eex
scripts/: bump_calver.exs  tauri_prebuild.sh  tauri_updater_keys.sh  test_macos_codesign_setup.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  updater.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test/: test_helper.exs
(+541 files in other folders)
