[package]
name = "safarimanager_desktop"
version = "26.5.6"
description = "Safari Manager desktop shell (Tauri + ElixirKit)"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "safarimanager_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "safarimanager_desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-fs = "2"
dirs = "5"
serde_json = "1"
elixirkit = { path = "../deps/elixirkit/elixirkit_rs" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
